related work, gym layout repr., behaviour model

--- a/report1/bib/bibliography.bib
+++ b/report1/bib/bibliography.bib
@@ -246,4 +246,44 @@ volume={27},
 	publisher={IEEE}
 }
 
+@article{turcine2022gym,
+  title={Gym Layout Modeling and Optimization},
+  author={K{\"u}{\c{c}}{\"u}kdeniz, T},
+  journal={Management Science Letters},
+  volume={12},
+  number={3},
+  pages={185--192},
+  year={2022}
+}
 
+
+@article{yang2020crowd_modelling_review,
+  title={A review on crowd simulation and modeling},
+  author={Yang, Shanwen and Li, Tianrui and Gong, Xun and Peng, Bo and Hu, Jie},
+  journal={Graphical Models},
+  volume={111},
+  pages={101081},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{feng2016crowd_drive_layout_design,
+  title={Crowd-driven mid-scale layout design.},
+  author={Feng, Tian and Yu, Lap-Fai and Yeung, Sai-Kit and Yin, KangKang and Zhou, Kun},
+  journal={ACM Trans. Graph.},
+  volume={35},
+  number={4},
+  pages={132--1},
+  year={2016}
+}
+
+@inproceedings{mathew2019urban_walkability,
+  title={Urban walkability design using virtual population simulation},
+  author={Mathew, CD Tharindu and Knob, Paulo R and Musse, Soraia Raupp and Aliaga, Daniel G},
+  booktitle={Computer Graphics Forum},
+  volume={38},
+  number={1},
+  pages={455--469},
+  year={2019},
+  organization={Wiley Online Library}
+}
