--- a/report1/pnas-new.cls
+++ b/report1/pnas-new.cls
@@ -243,7 +243,7 @@
     }
   \fi
 }
-\makeatother
+% \makeatother
 
 \renewcommand{\headrulewidth}{0pt}% % No header rule
 \renewcommand{\footrulewidth}{0pt}% % No footer rule
