Couple more corrections

--- a/report1/template.tex
+++ b/report1/template.tex
@@ -28,9 +28,9 @@
 \title{Simulation-driven gym layout optimization}
 
 % Use letters for affiliations, numbers to show equal authorship (if applicable) and to indicate the corresponding author
-\author{Andrej Jočić (m$\arctan$)}
-\author{Matic Stare (m$\arcsin$)}
-\author{Martin Krpan}
+\author{Andrej Jočić}
+\author{Matic Stare}
+\author{Martin Starič}
 
 \affil{Collective behaviour course research seminar report} 
 
